# complete/backend/app/routers/follower.py
@@ -8,7 +8,7 @@ from app.core.auth import get_current_user
 from app.controllers import follower_controller
 
 router = APIRouter(
-    prefix="/followers",
+    prefix="/follows",
     tags=["followers"],
     responses={404: {"description": "Not found"}},
 )
@@ -22,11 +22,11 @@ def follow_user(
     """사용자 팔로우하기"""
     return follower_controller.follow_user(db=db, follower=follower, current_user_id=current_user.id)
 
-@router.delete("/{following_id}")
+@router.delete("/", status_code=status.HTTP_200_OK)
 def unfollow_user(
-    following_id: int, 
+    follower: FollowerCreate,
     db: Session = Depends(get_db),
     current_user: User = Depends(get_current_user)
 ):
     """팔로우 취소하기"""
-    return follower_controller.unfollow_user(db=db, following_id=following_id, current_user_id=current_user.id)
+    return follower_controller.unfollow_user(db=db, following_id=follower.following_id, current_user_id=current_user.id)
